fix: grid gap

--- a/src/features/pages/home/client-testimonial/slider/styles.scss
+++ b/src/features/pages/home/client-testimonial/slider/styles.scss
@@ -40,14 +40,6 @@
     }
 }
 
-.quote_image {
-    position: absolute;
-    inline-size: 16rem;
-    block-size: 13rem;
-    inset-inline-start: 10px;
-    inset-block-start: -60px;
-}
-
 .testimonial_slide {
     block-size: 100%;
     position: relative;
