--- a/src/features/pages/home/client-testimonial/styles.module.scss
+++ b/src/features/pages/home/client-testimonial/styles.module.scss
@@ -4,3 +4,6 @@
 .quote_image {
     margin-block-start: -30px;
 }
+.slider_wrapper {
+    max-inline-size: 50%;
+}
