--- a/src/features/pages/home/client-testimonial/trustpiolot-container/styles.module.scss
+++ b/src/features/pages/home/client-testimonial/trustpiolot-container/styles.module.scss
@@ -1,6 +1,5 @@
 
 .trustpilot_container {
     height: 105px;
-    width: 240px;
-    margin-left: 10px;
+    width: 300px;
 }
